moved towards frontend

--- a/assets/locale/en.yml
+++ b/assets/locale/en.yml
@@ -1,4 +1,7 @@
 flagrow-masquerade:
+    forum:
+        buttons:
+            configure-profile: Configure profile
     admin:
         buttons:
             add-field: Add field
