--- a/assets/locale/en.yml
+++ b/assets/locale/en.yml
@@ -2,6 +2,7 @@ flagrow-masquerade:
     forum:
         buttons:
             configure-profile: Configure profile
+            save-profile: Save
     admin:
         buttons:
             add-field: Add field
