--- a/assets/locale/en.yml
+++ b/assets/locale/en.yml
@@ -1,6 +1,7 @@
 flagrow-masquerade:
     forum:
         buttons:
+            view-profile: View profile
             configure-profile: Configure profile
             save-profile: Save
     admin:
@@ -9,10 +10,11 @@ flagrow-masquerade:
             edit-field: Edit field
             delete-field: Delete field
         permissions:
-            view-profile: View Masquerade profile
+            have-profile: Have masquerade profile
+            view-profile: View masquerade profile
         menu:
             description: >
-                Configure the user profile fields.
+                Configure user profile fields.
         fields:
             add: Add field {field}
             edit: Edit field {field}
@@ -22,7 +24,7 @@ flagrow-masquerade:
             description: Field description
             description-help: >
                 An optional description to explain the use/need of this field.
-            required: Obligate field
+            required: Mark field obligatory
             validation: Validation
             validation-help: >
                 Check the supported <a>Laravel validation rules</a>. Eg:
