--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -29,6 +29,7 @@ flagrow-masquerade:
                 An optional description to explain the use/need of this field.
             required: Mark field obligatory
             on_bio: Show answer to this field in user bio
+            type: Type
             validation: Validation
             validation-help: >
                 Check the supported <a>Laravel validation rules</a>. Eg:
@@ -43,3 +44,6 @@ flagrow-masquerade:
                 the "fa-" prefix.
             force-user-to-completion: Force user to complete profile
             disable-user-bio: Disable user bio field
+        types:
+            advanced: Advanced
+            url: Url
