Add coma warning for option labels

--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -52,6 +52,7 @@ flagrow-masquerade:
             disable-user-bio: Disable user bio field
             options: Options
             option-new: New option
+            option-coma-warning: The label of an option cannot contain any coma (",").
         types:
             advanced: Advanced
             boolean: Checkbox
