--- a/resources/locale/fr.yml
+++ b/resources/locale/fr.yml
@@ -26,11 +26,11 @@ flagrow-masquerade:
             description: Description du champ
             description-help: >
                 Une description optionnelle pour expliquer l'utilisation ou la nécéssité de ce champ.
-            required: Marqué ce champ comme requis.
+            required: Marquer ce champ comme requis.
             on_bio: Voir la réponse à ce champ dans le profil
             validation: Validation
             validation-help: >
-                Vérifier les <a>règles de validation de Laravel</a>. Eg:
+                Vérifier les <a>règles de validation de Laravel</a>. Ex:
                 "string,min:5" ou "url".
             prefix: Préfixe du champ
             prefix-help: >
@@ -40,5 +40,5 @@ flagrow-masquerade:
                 Affiche une icône devant les valeurs entrées par l"utilisateurs. Pour une références
                 des icônes disponibles, elles sont disponibles sur <a>le site FontAwesome</a>.
                 Utilise "info" sans préfixe "fa-".
-            force-user-to-completion: Force l'utilisateur à remplir son profil.
+            force-user-to-completion: Forcer l'utilisateur à remplir son profil.
             disable-user-bio: Désactiver les champs de résumé utilisateur.
