--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -8,7 +8,8 @@ flagrow-masquerade:
             save-profile: Save
         fields:
             select:
-                none: No option selected
+                none-optional: No option selected (optional)
+                none-required: Please select an option (required)
             boolean:
                 yes: Yes
                 no: No
