Use separate translation key for settings title

--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -15,6 +15,7 @@ fof-masquerade:
                 no: No
     admin:
         title: Masquerade
+        general-options: General options
         buttons:
             add-field: Create field
             edit-field: Save changes
