--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -55,7 +55,7 @@ fof-masquerade:
             disable-user-bio: Disable user bio field
             options: Options
             option-new: New option
-            option-coma-warning: The label of an option cannot contain any coma (",").
+            option-coma-warning: The label of an option cannot contain any comma (",").
         types:
             advanced: Advanced
             boolean: Checkbox
