feat: add separate translation for view and edit options

--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -6,6 +6,7 @@ fof-masquerade:
             profile-completed: Profile completed! <a>Proceed to homepage</a>
         buttons:
             view-profile: View profile
+            edit-profile: Edit profile
             save-profile: Save
         fields:
             select:
