Add missing permission translation

--- a/resources/locale/en.yml
+++ b/resources/locale/en.yml
@@ -22,6 +22,7 @@ fof-masquerade:
             edit-field: Save changes
             delete-field: Delete field
         permissions:
+            edit-others-profile: Edit the profile of other users
             have-profile: Have masquerade profile
             view-profile: View masquerade profile
         fields:
